[package]
name = "deus-nqueens"
version = "0.1.0"
authors = ["Aster <galaster@foxmail.com>"]
description = "nqueens solver"
edition = "2018"
license = "MPL-2.0"
readme = "README.md"
repository = "https://github.com/GalAster/nqueens-rs"
exclude = ["/tests/*", "/.idea/*", "/benches/*"]

[lib]
name = "nqueens"
crate-type = ["cdylib"]

[dependencies]
num = "0.4.0"
rand = { version = "0.8.5", features = ["small_rng"] }
rayon = "1.5.2"
ndarray = "0.15.4"

[dependencies.wolfram-library-link]
version = "0.2.3"
optional = true

[features]
default = ["wolfram"]
wolfram = ["wolfram-library-link/nightly"]
