[package]
name = "deus-sudoku"
version = "0.1.0"
authors = ["Aster <galaster@foxmail.com>"]
description = "lights out solver"
edition = "2018"
license = "MPL-2.0"
readme = "README.md"
repository = "https://github.com/GalAster/nqueens-rs"
exclude = ["/tests/*", "/.idea/*", "/benches/*"]

[dependencies]
sudoku = "0.7.0"
sudokugen = "0.3.0"
num = "0.4.0"
sudoku_rs = "0.2.3"
sudoku-solver = "0.4.0"
sudoku-variants = "0.2.1"
