[package]
name = "deus"
version = "0.1.0"
authors = ["Aster <galaster@foxmail.com>"]
description = "waifu2x solver"
edition = "2018"
license = "MPL-2.0"
readme = "Readme.md"
repository = "https://github.com/GalAster/nqueens-rs"
exclude = []

[dependencies]
deus-nqueens = "0.4.2"

[dev-dependencies]
lights-out = "0.1.0"
sudoku = "0.7.0"
nonogram = "0.3.0"
