[package]
name = "geass"
version = "0.1.0"
authors = ["Aster <galaster@foxmail.com>"]
description = "15puzzle solver"
edition = "2018"
license = "MPL-2.0"
readme = "Readme.md"
repository = "https://github.com/GalAster/nqueens-rs"
exclude = []

[dev-dependencies]
pretty_assertions = "0.3"
ndarray = "0.15.4"
