[package]
name = "guess-number"
version = "0.1.0"
authors = ["Aster <galaster@foxmail.com>"]
description = "lights out solver"
edition = "2018"
license = "MPL-2.0"
readme = "README.md"
repository = "https://github.com/GalAster/nqueens-rs"
exclude = ["/tests/*", "/.idea/*", "/benches/*"]

[lib]
name = "guess"
crate-type = ["cdylib"]

[dependencies]
num = "0.4.0"
rand = { version = "0.8.5", features = ["small_rng"] }
rayon = "1.7.0"

[dependencies.wolfram-library-link]
version = "0.2.9"
optional = true

[features]
default = ["wolfram"]
wolfram = ["wolfram-library-link/nightly"]
